Fixed text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ section h2 {
 
 .project-info {
     margin-bottom: 2rem;
-    margin-right: 55.5%;
+    margin-right: 46%;
 }
 
 /* General Section Titles */
@@ -291,6 +291,13 @@ section h2 {
     margin-top: 12px;
     font-size: 16px;
     text-align: center;
+}
+
+/* UX Project style */
+.ux-projone-info {
+    margin-bottom: 2rem;
+    margin-top: -3%;
+    margin-left: 2%;
 }
   
 
